syntax = "proto3";

option go_package = "./gen";

import "user.proto"; 


message ListUsersReplay{
    repeated User users = 1;
}

message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
}

message UpdateUserRequest {
    uint32 ID = 1;
    string first_name = 2;
    string last_name = 3;
}

